tools/tests/errors/surf_num_01.ki
# Float division by zero must raise, not yield inf.
discard 1.0 / 0.0
